# NeverLiieStatusBar

./: .gitignore  Cargo.toml  README.md  package.bat  topbar.py
.github/workflows/: notify-parent.yml  release.yml
app/: base.py  config.py  winapiref.py
app/components/: audio.py  battery.py  clock.py  common.py  keyboard_lang.py  network.py  profile.py  settings_menu.py  systray.py
ipclib/: __init__.py  client.py  config.py  core.py  registry.py  server.py
src/: app.rs  audio_control.rs  bar_ui.rs  battery_control.rs  brightness_control.rs  config.rs  ipc.rs  keyboard_control.rs  main.rs  measure.rs  popup.rs  profile_control.rs  systray.rs  updater.rs  win32.rs  wireless_control.rs
src/platform/: icon_utils.rs  ipc.rs  mod.rs  systray.rs
src/services/: audio.rs  battery.rs  brightness.rs  mod.rs  network.rs  wireless.rs
src/ui/: bar.rs  mod.rs  settings.rs
src/ui/popup/: audio.rs  battery.rs  keyboard.rs  mod.rs  network.rs  profile.rs  settings.rs  tray.rs  update.rs  widgets.rs
tray-hook/: Cargo.toml
tray-hook/src/: lib.rs
